<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AddTaskFragment">

    <TextView
        android:id="@+id/add_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task_title"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_20sp"
        android:layout_marginTop="@dimen/dimen_40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dimen_20dp"
        android:layout_margin="@dimen/dimen_20dp"
        android:elevation="@dimen/dimen_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_task_title" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_margin="@dimen/dimen_20dp"
                android:paddingStart="@dimen/dimen_20dp"
                android:paddingEnd="@dimen/dimen_20dp"
                android:background="@drawable/input_field_bg"
                android:textCursorDrawable="@null"
                android:singleLine="true"
                android:hint="@string/title" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_150dp"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:paddingStart="@dimen/dimen_20dp"
                android:paddingEnd="@dimen/dimen_20dp"
                android:background="@drawable/input_field_bg"
                android:textCursorDrawable="@null"
                android:singleLine="false"
                android:hint="@string/description" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16sp"
                    android:layout_marginEnd="@dimen/dimen_20dp"/>

                <Spinner
                    android:id="@+id/status_spinner"
                    android:layout_width="@dimen/dimen_150dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:background="@drawable/input_field_bg"
                    android:spinnerMode="dialog"
                    android:pointerIcon="cell"
                    android:elevation="@dimen/dimen_20dp"
                    android:popupElevation="@dimen/dimen_20dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_task_note"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/dimen_14sp"
                android:layout_marginTop="@dimen/dimen_40dp"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginBottom="@dimen/dimen_40dp" >
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_task_button"
                    android:layout_width="@dimen/dimen_150dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:text="@string/add"
                    android:layout_weight="1"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete_task_button"
                    android:layout_width="@dimen/dimen_150dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:text="@string/delete"
                    android:visibility="gone"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>