<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.HomeFragment">

    <TextView
        android:id="@+id/logout"
        android:layout_width="@dimen/dimen_80dp"
        android:layout_height="@dimen/dimen_30dp"
        android:background="@drawable/border_bg"
        android:text="@string/logout"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/dimen_14sp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/search_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/search_bar"
        app:layout_constraintTop_toTopOf="@id/search_bar"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_margin="@dimen/dimen_20dp"
        android:drawableStart="@drawable/search_24"
        android:paddingStart="@dimen/dimen_10dp"
        android:paddingEnd="@dimen/dimen_20dp"
        android:hint="@string/search"
        android:background="@drawable/search_bg"
        android:textCursorDrawable="@null"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@id/logout"
        app:layout_constraintEnd_toStartOf="@id/filter_button"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/filter_button"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_30dp"
        android:background="@drawable/border_bg"
        android:spinnerMode="dropdown"
        android:elevation="@dimen/dimen_20dp"
        android:popupElevation="@dimen/dimen_20dp"
        android:tooltipText="@string/filter_with_status"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/search_bar"
        app:layout_constraintTop_toTopOf="@id/search_bar"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_tasks"
        android:textSize="@dimen/dimen_20sp"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_task_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:layout_margin="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_task_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20dp"
        android:text="@string/add_task"
        android:textColor="@color/black"
        android:backgroundTint="@color/floating_bg"
        app:icon="@drawable/add_icon"
        app:iconTint="@color/black"
        app:iconPadding="@dimen/dimen_5dp"
        app:elevation="@dimen/dimen_5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/dimen_40dp"
        android:layout_height="@dimen/dimen_40dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>