<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AddTaskFragment">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_20sp"
        android:layout_marginTop="@dimen/dimen_40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dimen_20dp"
        android:layout_margin="@dimen/dimen_20dp"
        android:elevation="@dimen/dimen_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_title" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_margin="@dimen/dimen_20dp"
                android:paddingStart="@dimen/dimen_20dp"
                android:paddingEnd="@dimen/dimen_20dp"
                android:background="@drawable/input_field_bg"
                android:textCursorDrawable="@null"
                android:singleLine="true"
                android:inputType="text"
                android:hint="@string/name" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:paddingStart="@dimen/dimen_20dp"
                android:paddingEnd="@dimen/dimen_20dp"
                android:background="@drawable/input_field_bg"
                android:textCursorDrawable="@null"
                android:singleLine="true"
                android:inputType="number"
                android:hint="@string/email" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:paddingStart="@dimen/dimen_20dp"
                android:paddingEnd="@dimen/dimen_20dp"
                android:background="@drawable/input_field_bg"
                android:textCursorDrawable="@null"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/password" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:paddingStart="@dimen/dimen_20dp"
                android:paddingEnd="@dimen/dimen_20dp"
                android:background="@drawable/input_field_bg"
                android:textCursorDrawable="@null"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_task_note"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/dimen_14sp"
                android:layout_marginTop="@dimen/dimen_40dp"
                android:layout_gravity="center_horizontal"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button"
                android:layout_width="@dimen/dimen_150dp"
                android:layout_height="@dimen/dimen_40dp"
                android:text="@string/register"
                android:allowClickWhenDisabled="false"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginBottom="@dimen/dimen_40dp"
                tools:targetApi="s" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>